Fixing an issue with the background not showing correctly with menu open

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,8 @@
+@import '../../variables.scss';
+
 .copyright {
-  margin: 20px;
+  padding: 20px;
+  background-color: $secondary;
 }
 
 .inner {
